# deepflow

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: build_library_demo.py  explore_then_workflow_demo.py  tasklist_generated_demo.py  tasklist_seeded_demo.py  tasklist_view.py  workflow_demo.py  workflow_with_tasks_demo.py
src/deepflow/: __init__.py  _subagent.py  agent.py  engine.py  events.py  middleware.py  spec.py  tasklist.py
tests/: test_tasklist.py  test_workflow.py
